// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildViolationMermaid > renders a custom.host violation as a single node labeled with the predicate name and its message 1`] = `
"\`\`\`mermaid
graph LR
  a["src/api/routes.ts<br/>predicate: route-thinness<br/>route handler is not thin"]
\`\`\`"
`;

exports[`buildViolationMermaid > renders a layers violation the same way, using layer names 1`] = `
"\`\`\`mermaid
graph LR
  a["api<br/>src/api/service.ts"]
  b["ui<br/>src/ui/component.ts"]
  a -->|"../ui/component.js (forbidden)"| b
\`\`\`"
`;

exports[`buildViolationMermaid > renders a layers-external violation naming the external package (ADR 017 Part A) 1`] = `
"\`\`\`mermaid
graph LR
  a["web<br/>src/web/a.ts"]
  b["external:lodash<br/>external:lodash"]
  a -->|"lodash (forbidden)"| b
\`\`\`"
`;

exports[`buildViolationMermaid > renders a no-cycles chain with the suggested break edge visually marked 1`] = `
"\`\`\`mermaid
graph LR
  n0["a.ts"]
  n1["b.ts"]
  n0 -->|"./b"| n1
  n2["c.ts"]
  n1 -->|"./c"| n2
  n2 -. "BREAK: ./a" .-> n0
\`\`\`"
`;

exports[`buildViolationMermaid > renders a no-dependency violation as the offending component/file relationship 1`] = `
"\`\`\`mermaid
graph LR
  a["api<br/>src/api/service.ts"]
  b["ui<br/>src/ui/component.ts"]
  a -->|"../ui/component.js (forbidden)"| b
\`\`\`"
`;

exports[`buildViolationMermaid > renders a no-dependency-external violation naming the external package (ADR 017 Part A) 1`] = `
"\`\`\`mermaid
graph LR
  a["core<br/>packages/core/src/index.ts"]
  b["external:child_process<br/>external:node:child_process"]
  a -->|"node:child_process (forbidden)"| b
\`\`\`"
`;
